Addint the Encode class

--- a/Bank_System/Bank_System.vcxproj
+++ b/Bank_System/Bank_System.vcxproj
@@ -135,6 +135,7 @@
     <ClCompile Include="DataSourceInterface.cpp" />
     <ClCompile Include="Employee.cpp" />
     <ClCompile Include="EmployeeManager.cpp" />
+    <ClCompile Include="Encdec.cpp" />
     <ClCompile Include="FileManager.cpp" />
     <ClCompile Include="FilesHelper.cpp" />
     <ClCompile Include="IdGenerator.cpp" />
@@ -151,6 +152,7 @@
     <ClInclude Include="DataSourceInterface.h" />
     <ClInclude Include="Employee.h" />
     <ClInclude Include="EmployeeManager.h" />
+    <ClInclude Include="Encdec.h" />
     <ClInclude Include="FileManager.h" />
     <ClInclude Include="FilesHelper.h" />
     <ClInclude Include="IdGenerator.h" />
