--- a/Bank_System/Bank_System.vcxproj.filters
+++ b/Bank_System/Bank_System.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="Screen.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Encdec.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Validation.h">
@@ -102,6 +105,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Screen.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Encdec.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
